# LULESH-MPI-RAJA

./: CMakeLists.txt
bench/omp-mpi/: res.py  script.py
bench/omp-single/: script.py
bench/ompOpt-single/: res.py  script.py
bench/ser-mpi-strong-scaling/: res.py  script.py
bench/ser-mpi-weak-scaling/: res.py  script.py
lulesh-v2.0/RAJA/: CMakeLists.txt  lulesh-comm.cpp  lulesh-init.cpp  lulesh.cpp  lulesh.hpp  luleshMemory.hpp  lulesh_ptr.hpp  lulesh_stl.hpp  lulesh_tuple.hpp
